--- a/blog-brisbane-business-seo.html
+++ b/blog-brisbane-business-seo.html
@@ -9,17 +9,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://anchorwebco.com.au/blog-brisbane-business-seo">
+    <meta property="og:url" content="https://www.anchorwebco.com.au/blog-brisbane-business-seo.html">
     <meta property="og:title" content="Brisbane Business SEO: Getting Found Online | Anchor Web Co.">
     <meta property="og:description" content="Brisbane Business SEO strategies to improve your online visibility. Expert SEO tips for Queensland businesses to rank higher and attract more customers.">
-    <meta property="og:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="og:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anchorwebco.com.au/blog-brisbane-business-seo">
+    <meta property="twitter:url" content="https://www.anchorwebco.com.au/blog-brisbane-business-seo.html">
     <meta property="twitter:title" content="Brisbane Business SEO: Getting Found Online | Anchor Web Co.">
     <meta property="twitter:description" content="Brisbane Business SEO strategies to improve your online visibility. Expert SEO tips for Queensland businesses to rank higher and attract more customers.">
-    <meta property="twitter:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="twitter:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <title>Brisbane Business SEO: Getting Found Online | Anchor Web Co.</title>
     
