--- a/blog-google-my-business-optimization.html
+++ b/blog-google-my-business-optimization.html
@@ -9,17 +9,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://anchorwebco.com.au/blog-google-my-business-optimization">
+    <meta property="og:url" content="https://www.anchorwebco.com.au/blog-google-my-business-optimization.html">
     <meta property="og:title" content="Google My Business Optimization for Local SEO | Anchor Web Co.">
     <meta property="og:description" content="Master Google My Business optimization to improve your local search rankings in Hervey Bay, Sunshine Coast, and Brisbane markets.">
-    <meta property="og:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="og:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anchorwebco.com.au/blog-google-my-business-optimization">
+    <meta property="twitter:url" content="https://www.anchorwebco.com.au/blog-google-my-business-optimization.html">
     <meta property="twitter:title" content="Google My Business Optimization for Local SEO | Anchor Web Co.">
     <meta property="twitter:description" content="Master Google My Business optimization to improve your local search rankings in Hervey Bay, Sunshine Coast, and Brisbane markets.">
-    <meta property="twitter:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="twitter:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <title>Google My Business Optimization for Local SEO | Anchor Web Co.</title>
     
