--- a/blog-hervey-bay-seo-company.html
+++ b/blog-hervey-bay-seo-company.html
@@ -9,17 +9,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://anchorwebco.com.au/blog-hervey-bay-seo-company">
+    <meta property="og:url" content="https://www.anchorwebco.com.au/blog-hervey-bay-seo-company.html">
     <meta property="og:title" content="Hervey Bay SEO Company: Why Choose Anchor Web Co. | Anchor Web Co.">
     <meta property="og:description" content="Looking for a Hervey Bay SEO company? Discover why Anchor Web Co. is the leading SEO Hervey Bay provider. Expert web design and SEO services for Fraser Coast businesses.">
-    <meta property="og:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="og:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anchorwebco.com.au/blog-hervey-bay-seo-company">
+    <meta property="twitter:url" content="https://www.anchorwebco.com.au/blog-hervey-bay-seo-company.html">
     <meta property="twitter:title" content="Hervey Bay SEO Company: Why Choose Anchor Web Co. | Anchor Web Co.">
     <meta property="twitter:description" content="Looking for a Hervey Bay SEO company? Discover why Anchor Web Co. is the leading SEO Hervey Bay provider. Expert web design and SEO services for Fraser Coast businesses.">
-    <meta property="twitter:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="twitter:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <title>Hervey Bay SEO Company: Why Choose Anchor Web Co. | Anchor Web Co.</title>
     
