--- a/blog-local-seo-hervey-bay.html
+++ b/blog-local-seo-hervey-bay.html
@@ -9,17 +9,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://anchorwebco.com.au/blog-local-seo-hervey-bay">
+    <meta property="og:url" content="https://www.anchorwebco.com.au/blog-local-seo-hervey-bay.html">
     <meta property="og:title" content="Local SEO Strategies for Hervey Bay Businesses | Anchor Web Co.">
     <meta property="og:description" content="Local SEO strategies for Hervey Bay businesses. Learn proven techniques to improve your local search rankings and attract more customers from the Fraser Coast region.">
-    <meta property="og:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="og:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anchorwebco.com.au/blog-local-seo-hervey-bay">
+    <meta property="twitter:url" content="https://www.anchorwebco.com.au/blog-local-seo-hervey-bay.html">
     <meta property="twitter:title" content="Local SEO Strategies for Hervey Bay Businesses | Anchor Web Co.">
     <meta property="twitter:description" content="Local SEO strategies for Hervey Bay businesses. Learn proven techniques to improve your local search rankings and attract more customers from the Fraser Coast region.">
-    <meta property="twitter:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="twitter:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <title>Local SEO Strategies for Hervey Bay Businesses | Anchor Web Co.</title>
     
