--- a/blog-mobile-first-design.html
+++ b/blog-mobile-first-design.html
@@ -9,17 +9,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://anchorwebco.com.au/blog-mobile-first-design">
+    <meta property="og:url" content="https://www.anchorwebco.com.au/blog-mobile-first-design.html">
     <meta property="og:title" content="Mobile-First Website Design: Why It Matters | Anchor Web Co.">
     <meta property="og:description" content="Mobile-first website design is crucial for Queensland businesses. Learn why mobile optimization impacts your SEO rankings and user experience.">
-    <meta property="og:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="og:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anchorwebco.com.au/blog-mobile-first-design">
+    <meta property="twitter:url" content="https://www.anchorwebco.com.au/blog-mobile-first-design.html">
     <meta property="twitter:title" content="Mobile-First Website Design: Why It Matters | Anchor Web Co.">
     <meta property="twitter:description" content="Mobile-first website design is crucial for Queensland businesses. Learn why mobile optimization impacts your SEO rankings and user experience.">
-    <meta property="twitter:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="twitter:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <title>Mobile-First Website Design: Why It Matters | Anchor Web Co.</title>
     
