--- a/blog-seo-hervey-bay-fraser-coast.html
+++ b/blog-seo-hervey-bay-fraser-coast.html
@@ -9,14 +9,14 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://www.anchorwebco.com.au/blog-seo-hervey-bay-fraser-coast">
+    <meta property="og:url" content="https://www.anchorwebco.com.au/blog-seo-hervey-bay-fraser-coast.html">
     <meta property="og:title" content="SEO Hervey Bay: Fraser Coast Business Success Stories | Anchor Web Co.">
     <meta property="og:description" content="SEO Hervey Bay: How Fraser Coast businesses are dominating Google search results. Learn proven SEO strategies that work for tourism, retail, and service businesses in the Hervey Bay region.">
     <meta property="og:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.anchorwebco.com.au/blog-seo-hervey-bay-fraser-coast">
+    <meta property="twitter:url" content="https://www.anchorwebco.com.au/blog-seo-hervey-bay-fraser-coast.html">
     <meta property="twitter:title" content="SEO Hervey Bay: Fraser Coast Business Success Stories | Anchor Web Co.">
     <meta property="twitter:description" content="SEO Hervey Bay: How Fraser Coast businesses are dominating Google search results. Learn proven SEO strategies that work for tourism, retail, and service businesses in the Hervey Bay region.">
     <meta property="twitter:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
