--- a/blog-tradies-websites-more-jobs.html
+++ b/blog-tradies-websites-more-jobs.html
@@ -9,17 +9,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://anchorwebco.com.au/blog-tradies-websites-more-jobs">
+    <meta property="og:url" content="https://www.anchorwebco.com.au/blog-tradies-websites-more-jobs.html">
     <meta property="og:title" content="How Tradies Can Get Websites to Book More Jobs | SEO Hervey Bay">
     <meta property="og:description" content="How tradies can get professional websites to book more jobs. Learn about SEO Hervey Bay, website design Maryborough, and digital marketing strategies for trade businesses in Fraser Coast.">
-    <meta property="og:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="og:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anchorwebco.com.au/blog-tradies-websites-more-jobs">
+    <meta property="twitter:url" content="https://www.anchorwebco.com.au/blog-tradies-websites-more-jobs.html">
     <meta property="twitter:title" content="How Tradies Can Get Websites to Book More Jobs | SEO Hervey Bay">
     <meta property="twitter:description" content="How tradies can get professional websites to book more jobs. Learn about SEO Hervey Bay, website design Maryborough, and digital marketing strategies for trade businesses in Fraser Coast.">
-    <meta property="twitter:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="twitter:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <title>How Tradies Can Get Websites to Book More Jobs | SEO Hervey Bay</title>
     
