--- a/blog-website-design-sunshine-coast.html
+++ b/blog-website-design-sunshine-coast.html
@@ -9,17 +9,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://anchorwebco.com.au/blog-website-design-sunshine-coast">
+    <meta property="og:url" content="https://www.anchorwebco.com.au/blog-website-design-sunshine-coast.html">
     <meta property="og:title" content="Website Design Trends for Sunshine Coast Tourism | Anchor Web Co.">
     <meta property="og:description" content="Website design trends for Sunshine Coast tourism businesses. Discover modern design strategies to attract more visitors and increase bookings in 2025.">
-    <meta property="og:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="og:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anchorwebco.com.au/blog-website-design-sunshine-coast">
+    <meta property="twitter:url" content="https://www.anchorwebco.com.au/blog-website-design-sunshine-coast.html">
     <meta property="twitter:title" content="Website Design Trends for Sunshine Coast Tourism | Anchor Web Co.">
     <meta property="twitter:description" content="Website design trends for Sunshine Coast tourism businesses. Discover modern design strategies to attract more visitors and increase bookings in 2025.">
-    <meta property="twitter:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="twitter:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <title>Website Design Trends for Sunshine Coast Tourism | Anchor Web Co.</title>
     
