--- a/blog-website-speed-optimization.html
+++ b/blog-website-speed-optimization.html
@@ -9,17 +9,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://anchorwebco.com.au/blog-website-speed-optimization">
+    <meta property="og:url" content="https://www.anchorwebco.com.au/blog-website-speed-optimization.html">
     <meta property="og:title" content="Website Speed Optimization for Better Rankings | Anchor Web Co.">
     <meta property="og:description" content="Learn how website speed affects your SEO rankings and discover practical tips to improve your site's loading times for better user experience.">
-    <meta property="og:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="og:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anchorwebco.com.au/blog-website-speed-optimization">
+    <meta property="twitter:url" content="https://www.anchorwebco.com.au/blog-website-speed-optimization.html">
     <meta property="twitter:title" content="Website Speed Optimization for Better Rankings | Anchor Web Co.">
     <meta property="twitter:description" content="Learn how website speed affects your SEO rankings and discover practical tips to improve your site's loading times for better user experience.">
-    <meta property="twitter:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="twitter:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <title>Website Speed Optimization for Better Rankings | Anchor Web Co.</title>
     
