--- a/blog.html
+++ b/blog.html
@@ -9,17 +9,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://anchorwebco.com.au/blog">
+    <meta property="og:url" content="https://www.anchorwebco.com.au/blog.html">
     <meta property="og:title" content="Website Design & SEO Blog | Anchor Web Co.">
     <meta property="og:description" content="Website design and SEO blog - Expert tips for Hervey Bay, Sunshine Coast & Brisbane businesses. Learn about local SEO, web design trends, and digital marketing strategies.">
-    <meta property="og:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="og:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anchorwebco.com.au/blog">
+    <meta property="twitter:url" content="https://www.anchorwebco.com.au/blog.html">
     <meta property="twitter:title" content="Website Design & SEO Blog | Anchor Web Co.">
     <meta property="twitter:description" content="Website design and SEO blog - Expert tips for Hervey Bay, Sunshine Coast & Brisbane businesses. Learn about local SEO, web design trends, and digital marketing strategies.">
-    <meta property="twitter:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="twitter:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <title>Website Design & SEO Blog | Anchor Web Co.</title>
     
