--- a/contact.html
+++ b/contact.html
@@ -9,17 +9,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://anchorwebco.com.au/contact">
+    <meta property="og:url" content="https://www.anchorwebco.com.au/contact.html">
     <meta property="og:title" content="Contact Us | Anchor Web Co.">
     <meta property="og:description" content="Contact Anchor Web Co. for website development and SEO services in Hervey Bay, Sunshine Coast & Brisbane. Call 0439 499 944 or email info@anchorwebco.com.au">
-    <meta property="og:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="og:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anchorwebco.com.au/contact">
+    <meta property="twitter:url" content="https://www.anchorwebco.com.au/contact.html">
     <meta property="twitter:title" content="Contact Us | Anchor Web Co.">
     <meta property="twitter:description" content="Contact Anchor Web Co. for website development and SEO services in Hervey Bay, Sunshine Coast & Brisbane. Call 0439 499 944 or email info@anchorwebco.com.au">
-    <meta property="twitter:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="twitter:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <title>Contact Us | Anchor Web Co.</title>
     
