--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://anchorwebco.com.au/">
+    <meta property="og:url" content="https://www.anchorwebco.com.au/">
     <meta property="og:title" content="Website Development & SEO | Anchor Web Co.">
     <meta property="og:description" content="Website Development & SEO Hervey Bay. Professional web design and SEO services for Sunshine Coast and Brisbane businesses. Local experts, affordable pricing.">
-    <meta property="og:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="og:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anchorwebco.com.au/">
+    <meta property="twitter:url" content="https://www.anchorwebco.com.au/">
     <meta property="twitter:title" content="Website Development & SEO | Anchor Web Co.">
     <meta property="twitter:description" content="Website Development & SEO Hervey Bay. Professional web design and SEO services for Sunshine Coast and Brisbane businesses. Local experts, affordable pricing.">
-    <meta property="twitter:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="twitter:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <title>Website Development & SEO | Anchor Web Co.</title>
     
@@ -132,8 +132,8 @@
     <section id="portfolio" class="py-16">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-poppins font-bold text-center mb-12">Featured Work</h2>
-            <div class="max-w-4xl mx-auto">
-                <div class="grid md:grid-cols-2 gap-8">
+            <div class="max-w-6xl mx-auto">
+                <div class="grid md:grid-cols-3 gap-8">
                     <div class="bg-white rounded-lg shadow-lg p-8 text-center">
                         <div class="mb-6">
                             <img src="img/bh-lock.webp" alt="BH Lock and Security - Professional locksmith and security services logo" class="mx-auto max-h-24 object-contain" width="200" height="96" loading="lazy" decoding="async">
@@ -151,6 +151,16 @@
                         <h3 class="text-xl font-poppins font-bold mb-4">Maryborough Mowerman</h3>
                         <p class="text-gray-600 mb-6">Professional website design and development for this local lawn care business. Modern, mobile-responsive design with clear service information and contact details.</p>
                         <a href="https://maryboroughmowerman.com.au/" target="_blank" rel="noopener noreferrer" class="btn-primary">
+                            Visit Website
+                        </a>
+                    </div>
+                    <div class="bg-white rounded-lg shadow-lg p-8 text-center">
+                        <div class="mb-6">
+                            <img src="img/Bannister_Logo.jpg" alt="Bannister Communications - Professional security camera installation services logo" class="mx-auto max-h-24 object-contain" width="200" height="96" loading="lazy" decoding="async">
+                        </div>
+                        <h3 class="text-xl font-poppins font-bold mb-4">Bannister Communications</h3>
+                        <p class="text-gray-600 mb-6">Complete website rebuild for this security camera installation company. Modern, professional design with enhanced functionality and improved user experience.</p>
+                        <a href="https://bannistercommunications.com" target="_blank" rel="noopener noreferrer" class="btn-primary">
                             Visit Website
                         </a>
                     </div>
