--- a/thank-you.html
+++ b/thank-you.html
@@ -9,17 +9,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://anchorwebco.com.au/thank-you">
+    <meta property="og:url" content="https://www.anchorwebco.com.au/thank-you.html">
     <meta property="og:title" content="Thank You | Anchor Web Co.">
     <meta property="og:description" content="Thank you for contacting Anchor Web Co. We'll be in touch soon about your website development and SEO needs.">
-    <meta property="og:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="og:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anchorwebco.com.au/thank-you">
+    <meta property="twitter:url" content="https://www.anchorwebco.com.au/thank-you.html">
     <meta property="twitter:title" content="Thank You | Anchor Web Co.">
     <meta property="twitter:description" content="Thank you for contacting Anchor Web Co. We'll be in touch soon about your website development and SEO needs.">
-    <meta property="twitter:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="twitter:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <title>Thank You | Anchor Web Co.</title>
     
