--- a/about.html
+++ b/about.html
@@ -13,17 +13,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://anchorwebco.com.au/about">
+    <meta property="og:url" content="https://www.anchorwebco.com.au/about.html">
     <meta property="og:title" content="About Us | Anchor Web Co.">
     <meta property="og:description" content="About Anchor Web Co. - Local website development and SEO experts in Hervey Bay, Sunshine Coast & Brisbane. Founded by Matt Milzewski in Maryborough.">
-    <meta property="og:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="og:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anchorwebco.com.au/about">
+    <meta property="twitter:url" content="https://www.anchorwebco.com.au/about.html">
     <meta property="twitter:title" content="About Us | Anchor Web Co.">
     <meta property="twitter:description" content="About Anchor Web Co. - Local website development and SEO experts in Hervey Bay, Sunshine Coast & Brisbane. Founded by Matt Milzewski in Maryborough.">
-    <meta property="twitter:image" content="https://anchorwebco.com.au/img/og-image.webp">
+    <meta property="twitter:image" content="https://www.anchorwebco.com.au/img/og-image.webp">
 
     <title>About Us | Anchor Web Co.</title>
     
