--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     </div>
                     <div class="bg-white rounded-lg shadow-lg p-8 text-center">
                         <div class="mb-6">
-                            <img src="img/Bannister_Logo.jpg" alt="Bannister Communications - Professional security camera installation services logo" class="mx-auto max-h-24 object-contain" width="200" height="96" loading="lazy" decoding="async">
+                            <img src="img/Bannister_Logo.webp" alt="Bannister Communications - Professional security camera installation services logo" class="mx-auto max-h-24 object-contain" width="200" height="96" loading="lazy" decoding="async">
                         </div>
                         <h3 class="text-xl font-poppins font-bold mb-4">Bannister Communications</h3>
                         <p class="text-gray-600 mb-6">Complete website rebuild for this security camera installation company. Modern, professional design with enhanced functionality and improved user experience.</p>
